--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -131,6 +131,7 @@
             "filter-by":"Filter by",
             "reviews":"Reviews",
             "years":"years",
+            "months":"months",
             "rate-minute":"Rate per minute",
             "rate-hour":"Rate per hour",
             "from": "From",
