--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -131,6 +131,7 @@
             "filter-by":"Filtrar por",
             "reviews":"Calificación",
             "years":"años",
+            "months":"meses",
             "rate-minute":"Precio por minuto",
             "rate-hour":"Precio por hora",
             "from": "De",
